--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
             <form action="" novalidate>
                 <label>
                     <input type="email" placeholder="Your email address...">
-                    <span class="error-massage">Please provide a valid email address</span>
+                <span class="error-massage">Please provide a valid email address</span>
                 </label>
-                <button>Notify Me</button>
+                <button type="submit">Notify Me</button>
             </form>
         </div>
         <img src="images/illustration-dashboard.png" alt="">
-    <footer>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <p>&copy; Copyright Ping. All rights reserved.</p>
-    </footer>
+        <footer>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <p>&copy; Copyright Ping. All rights reserved.</p>
+        </footer>
     </div>
 </main>
 </body>
