--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <h1>We are launching <span>soon!</span></h1>
         <p class="first">Subscribe and get notified</p>
         <div class="form">
-            <form action="" novalidate>
+            <form id="form" action="" novalidate>
                 <label>
-                    <input type="email" placeholder="Your email address...">
-                <span class="error-massage">Please provide a valid email address</span>
+                    <input id="email" type="email" placeholder="Your email address...">
+                    <span id="error-massage" class="error-massage">Please provide a valid email address</span>
                 </label>
                 <button type="submit">Notify Me</button>
             </form>
@@ -38,5 +38,6 @@
         </footer>
     </div>
 </main>
+<script src="script.js"></script>
 </body>
 </html>
